syntax = "proto2";
package app.cash.backfila.protos.service;

option java_package = "app.cash.backfila.protos.service";
option java_generic_services = true;

// In this file: APIs that the service provides to the client.

message Parameter {
  optional string name = 1;
  // Description to show in the UI.
  optional string description = 2;
}

message ConfigureServiceRequest {
  message BackfillData {
    // Identifies the backfill. Must be unique per service.
    optional string name = 1;
    // Description to show in the UI.
    optional string description = 2;

    // Parameters the backfill will accept. An input is displayed in the UI for each parameter.
    repeated Parameter parameters = 3;

    // The class name of pipelined data, only set if backfill supports pipelining.
    optional string type_provided = 4;
    optional string type_consumed = 5;

    // If true the backfill will need approval from another user before it can be started.
    optional bool requires_approval = 6;

    // Notes when this backfill should no longer be useful and the code should be deleted. This will
    // be used to power removal reminders. It will guarantee that reminders will not occur until
    // after this date. This defaults to as soon as possible if it is missing.
    optional uint64 delete_by = 7;
  }

  // List of all available backfills in this service
  repeated BackfillData backfills = 1;

  // This isn't encoded as protobuf so connector implementations can be added without modifying
  // protos (thus avoiding modifying the core backfila codebase).
  optional string connector_type = 2;

  // Extra data that is passed through to the connector corresponding to connector_type.
  // Suggested encoding is JSON. For example ENVOY type could have the cluster type as extra data:
  //  e.g.: `{"cluster_type": "production-jobs"}`
  optional string connector_extra_data = 3;

  optional string slack_channel = 4;
}

message ConfigureServiceResponse {

}

message CreateBackfillRequest {
  optional string backfill_name = 1;
  optional uint64 scan_size = 2;
  optional uint64 batch_size = 3;
  optional uint32 num_threads = 4;
  optional bytes pkey_range_start = 5;
  optional bytes pkey_range_end = 6;
  // Parameters that go to the client service.
  map<string, bytes> parameter_map = 7;
  optional bool dry_run = 8;
  optional string backoff_schedule = 9;
  optional uint64 extra_sleep_ms = 10;
}

message CreateBackfillResponse {
  optional uint64 backfill_run_id = 1;
}

// Creates a backfill under the calling service and starts it.
message CreateAndStartBackfillRequest {
  optional CreateBackfillRequest create_request = 1;
}

message CreateAndStartBackfillResponse {
  optional uint64 backfill_run_id = 1;
}

// Checks on the status of a backfill.
message CheckBackfillStatusRequest {
  optional uint64 backfill_run_id = 1;
}

message CheckBackfillStatusResponse {
  optional Status status = 1;

  enum Status {
    PAUSED = 1;
    RUNNING = 2;
    COMPLETE = 3;
  }
}
